fixed spacing issues

--- a/src/styles/components/_whyEcocart.scss
+++ b/src/styles/components/_whyEcocart.scss
@@ -5,7 +5,8 @@
   display: flex;
   align-items: center;
   @media (min-width: 1000px) {
-    padding: 15rem 0;
+    padding: 5rem 0;
+    padding-bottom: 2rem;
   }
   h1 {
     font-size: 5rem;
