--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -35,7 +35,7 @@
   height: auto;
   padding: 8rem 0;
   @media (min-width: 1000px) {
-    padding: 15rem 0;
+    padding: 5rem 0;
   }
   h1 {
     font-size: 5rem;
